# django-haveli-admin

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
django_haveli_admin/: __init__.py  admin.py  forms.py  sites.py  utils.py
django_haveli_admin/static/admin/css/: base.css  changelists.css  common.css  forms.css  login.css  responsive.css  widgets.css
django_haveli_admin/static/admin/js/: haveli.init.js  haveli_filter.js  haveli_sidebar.js  user_menu.js
django_haveli_admin/templates/admin/: base.html  base_site.html  change_list.html  filter.html  login.html  nav_sidebar.html  search_form.html  sidebar_list.html  suit_change_list.html  user_drop_down.html
django_haveli_admin/templates/registration/: password_change_done.html  password_change_form.html
django_haveli_admin/templatetags/: django_template_tags.py  haveli_list_filters.py
docs/: app_config.rst  configurations.rst  getting_started.rst  index.rst
