[metadata]
name = django-haveli-admin
version = 0.1
description = Improved theme for Django admin Interface
long_description = file: README.rst
url = 
author = Purnendu Kar
author_email = purnendu.kar8@gmail.com
license = MIT License 
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces

[options]
include_package_data = true
packages = find: