[metadata]
name = django-haveli-admin
version = 0.0.1
description = Improved theme for Django admin Interface
long_description = file: README.md
long_description_content_type= text/markdown
url = https://github.com/purnendukar/django-haveli-admin
author = Purnendu Kar
author_email = purnendu.kar8@gmail.com
license = MIT License 
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:
django_requires = >=2.1